--- a/Authentication-Page.html
+++ b/Authentication-Page.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="form-container">
-            <form id="loginForm" class="active">
+            <form id="loginForm" class="active form-hidden">
                 <div>
                     <label for="loginEmail">email</label>
                     <input type="email" id="loginEmail" placeholder="enter your email" required>
@@ -26,7 +26,7 @@
                 <button type="submit">login</button>
             </form>
 
-            <form id="registerForm">
+            <form id="registerForm"  class="form-hidden">
                 <div>
                     <label for="register">email</label>
                     <input type="email" id="registerEmail" placeholder="enter your email" required>
@@ -45,5 +45,6 @@
     </div>
 
     <script src="./logic.js"></script>
+    <script src="./quizzes.js"></script>
 </body>
 </html>
