--- a/Dashboard.html
+++ b/Dashboard.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Dashboard</h1>
-    <div id="usersList"></div>
+    <div>
+        <h1>Dashboard</h1>
+        <div id="usersList" class="Dashboard"></div>
+    </div>
 
     <script src="./Dashboard.js"></script>
 </body>
