--- a/index.html
+++ b/index.html
@@ -1,50 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Authentication Page</title>
-    <link rel="stylesheet" href="./style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Authentication</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
+
+<body class="auth-page">
     <div class="auth-container">
-        <div class="tabs">
-            <button class="tab-button active" id="loginTab">login</button>
-            <button class="tab-button" id="registerTab">register</button>
-        </div>
+        <nav class="tabs">
+            <button data-target="login" class="tab-button active">Login</button>
+            <button data-target="register" class="tab-button">Register</button>
+        </nav>
 
         <div class="form-container">
-            <form id="loginForm" class="active form-hidden">
-                <div>
-                    <label for="loginEmail">email</label>
-                    <input type="email" id="loginEmail" placeholder="enter your email" required>
+            <form id="loginForm" class="form active">
+                <h2>Login</h2>
+                <div class="form-group">
+                    <label for="loginEmail">Email</label>
+                    <input type="email" id="loginEmail" required>
                 </div>
-                <div>
+                <div class="form-group">
                     <label for="loginPassword">Password</label>
-                    <input type="password" id="loginPassword" placeholder="enter your password" required>
+                    <input type="password" id="loginPassword" required>
                 </div>
-                <button type="submit">login</button>
+                <div class="error-message" id="loginError"></div>
+                <button type="submit">Login</button>
             </form>
 
-            <form id="registerForm"  class="form-hidden">
-                <div>
-                    <label for="register">email</label>
-                    <input type="email" id="registerEmail" placeholder="enter your email" required>
+            <form id="registerForm" class="form">
+                <h2>Register</h2>
+                <div class="form-group">
+                    <label for="registerEmail">Email</label>
+                    <input type="email" id="registerEmail" required>
                 </div>
-                <div>
-                    <label for="registerPassword">password</label>
-                    <input type="password" id="registerPassword" placeholder="enter your password" required>
+                <div class="form-group">
+                    <label for="registerPassword">Password</label>
+                    <input type="password" id="registerPassword" required>
                 </div>
-                <div>
-                    <label for="registerConfirmPassword">confirm password</label>
-                    <input type="password" id="registerConfirmPassword" placeholder="re-enter password" required>
+                <div class="form-group">
+                    <label for="registerConfirmPassword">Confirm Password</label>
+                    <input type="password" id="registerConfirmPassword" required>
                 </div>
-                <button type="submit">register</button>
+                <div class="error-message" id="registerError"></div>
+                <button type="submit">Register</button>
             </form>
         </div>
     </div>
 
-    <script src="./logic.js"></script>
-    <script src="./quizzes.js"></script>
+    <script type="module" src="./js/quizzes.js"></script>
+    <script type="module" src="./js/auth.js"></script>
 </body>
+
 </html>
